--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fraggregator",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "fraggregator.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +13,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "lodash": "^4.17.21",
+    "lowdb": "^2.1.0",
     "node-pty": "^0.10.1",
     "socket.io": "^4.1.2"
-  }
+  },
+  "type": "module"
 }
